[package]
name = "rusnet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bitflags = "2.8.0"
etherparse = "0.17.0"
http = "1.2.0"
memchr = "2.7.4"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tun = "0.7.13"
